--- a/设计模式/设计模式(结构型) .md
+++ b/设计模式/设计模式(结构型) .md
@@ -2,11 +2,15 @@
 
 # 设计模式
 
+
+
 ## 设计原则
+
+结构型模式描述如何将类或对象按某种布局组成更大的结构。它分为类结构型模式和对象结构型模式，前者采用继承机制来组织接口和类，后者釆用组合或聚合来组合对象。
 
 [toc]
 
-## 创建型模式分为以下几种。
+## 结构模式分为以下几种。
 
 1. 代理（Proxy）模式：为某对象提供一种代理以控制对该对象的访问。即客户端通过代理间接地访问该对象，从而限制、增强或修改该对象的一些特性。
 2. 适配器（Adapter）模式：将一个类的接口转换成客户希望的另外一个接口，使得原本由于接口不兼容而不能一起工作的那些类能一起工作。
@@ -16,8 +20,9 @@
 6. 享元（Flyweight）模式：运用共享技术来有效地支持大量细粒度对象的复用。
 7. 组合（Composite）模式：将对象组合成树状层次结构，使用户对单个对象和组合对象具有一致的访问性。
 
-
 ### 代理模式
+
+代理模式的定义：由于某些原因需要给某对象提供一个代理以控制对该对象的访问。这时，访问对象不适合或者不能直接引用目标对象，代理对象作为访问对象和目标对象之间的中介。
 
 
 ```mermaid
@@ -118,6 +123,8 @@ class Client {
 
 ### 适配器模式
 
+适配器模式（Adapter）的定义如下：将一个类的接口转换成客户希望的另外一个接口，使得原本由于接口不兼容而不能一起工作的那些类能一起工作。适配器模式分为类结构型模式和对象结构型模式两种，前者类之间的耦合度比后者高，且要求程序员了解现有组件库中的相关组件的内部结构，所以应用相对较少些。
+
 ```mermaid
 classDiagram
 
@@ -177,9 +184,7 @@ class Client{
 
 
 
-### 桥接模式
-
-
+### 桥接
 
 桥接（Bridge）模式的定义如下：将抽象与实现分离，使它们可以独立变化。它是用组合关系代替继承关系来实现，从而降低了抽象和实现这两个可变维度的耦合度。
 
@@ -229,8 +234,6 @@ class Client{
 ```
 
 ### 装饰器
-
-
 
 装饰器（Decorator）模式的定义：指在不改变现有对象结构的情况下，动态地给该对象增加一些职责（即增加其额外功能）的模式，它属于对象结构型模式。
 
@@ -335,12 +338,44 @@ class FlyWeightFactory{
 class Client{
 +main() void
 }
+```
 
+### 组合模式
+
+有时又叫作整体-部分（Part-Whole）模式，它是一种将对象组合成树状的层次结构的模式，用来表示“整体-部分”的关系，使用户对单个对象和组合对象具有一致的访问性，属于结构型[设计模式]。
+
+```mermaid
+classDiagram
+
+Component <|..* Composite
+Component <|.. Leaf
+Component <.. Client
+
+class Component{
+<<interface>>
++operation() void
+}
+
+class Composite{
+-children:ArrayList<Component>
++add(Component com)
++getChild(int i) Component
++operation() void
+}
+
+class Leaf{
+-name:String
++Leaf(String)
++operation() void
+}
+
+class Client {
++main() void
+}
 
 ```
 
 
 
-### 组合模式
 
-享元（Flyweight）模式的定义：运用共享技术来有效地支持大量细粒度对象的复用。它通过共享已经存在的对象来大幅度减少需要创建的对象数量、避免大量相似类的开销，从而提高系统资源的利用率。
+
