--- a/设计模式/设计模式(创建型).md
+++ b/设计模式/设计模式(创建型).md
@@ -12,6 +12,8 @@
 里氏替换原则	|不要破坏继承体系，子类重写方法功能发生改变，不应该影响父类方法的含义|	防止继承泛滥
 合成复用原则	|尽量使用组合或者聚合关系实现代码复用，少使用继承|	降低代码耦合
 
+创建型模式的主要关注点是“怎样创建对象？”，它的主要特点是“将对象的创建与使用分离”。这样可以降低系统的耦合度，使用者不需要关注对象的创建细节，对象的创建由相关的工厂来完成。就像我们去商场购买商品时，不需要知道商品是怎么生产出来一样，因为它们由专门的厂商生产。
+
 [toc]
 
 ## 创建型模式分为以下几种。
