--- a/设计模式/设计模式(结构型) .md
+++ b/设计模式/设计模式(结构型) .md
@@ -6,7 +6,7 @@
 
 ## 设计原则
 
-结构型模式描述如何将类或对象按某种布局组成更大的结构。它分为类结构型模式和对象结构型模式，前者采用继承机制来组织接口和类，后者釆用组合或聚合来组合对象。
+结构型模式描述如何将类或对象按某种布局组成更大的结构。它分为类结构型模式和对象结构型模式，前者采用继承机制来组织接口和类，后者釆用组合或聚合来组合对象。也可分为[代理模式](http://c.biancheng.net/view/1359.html)（Proxy）、[适配器模式](http://c.biancheng.net/view/1361.html)（Adapter）、[桥接模式](http://c.biancheng.net/view/1364.html)（Bridge）、[装饰模式](http://c.biancheng.net/view/1366.html) （Decorator ）、[外观模式](http://c.biancheng.net/view/1369.html)（Facade）、享元模式（Flyweight）和[组合模式](http://c.biancheng.net/view/1373.html)（Composite）等 7 类。
 
 [toc]
 
